[package]
name = "massmap"
version = "0.1.2"
edition = "2024"
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
homepage = "https://github.com/SF-Zhou/massmap"
repository = "https://github.com/SF-Zhou/massmap"
description = "Static hash table that scales via disk-backed expansion to trim memory usage while ensuring each lookup needs exactly one I/O."
license = "MIT OR Apache-2.0"

[dependencies]
foldhash = "0.2"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
clap = {version = "4.5", features = ["derive"]}
rand = "0.9"
serde_json = "1.0"
tempfile = "3"
